# backend-api/src/routes/orderitem.routes.js
@@ -2,40 +2,19 @@ const express = require("express");
 const router = express.Router();
 const orderItemController = require("../controller/orderitem.controller");
 const verifyToken = require("../middlewares/verifyToken");
-const checkRole = require("../middlewares/checkRole");
 const validate = require("../middlewares/validate");
-const {
-  createOrderItemSchema,
-  updateOrderItemSchema,
-} = require("../schema/orderitem.schema");
+const { createOrderItemSchema, updateOrderItemSchema } = require("../schema/orderitem.schema");
 
-// GET all order items (admin only)
-router.get("/", verifyToken, orderItemController.getAll);
+// GET all order items 
+router.get("/order/:orderId", verifyToken, orderItemController.getByOrderId);
 
-// POST create new order item
-router.post(
-  "/",
-  verifyToken,
-  checkRole("admin"),
-  validate(createOrderItemSchema),
-  orderItemController.create
-);
+// POST create new order item 
+router.post("/", verifyToken, validate(createOrderItemSchema), orderItemController.create);
 
-// PUT update order item by id
-router.put(
-  "/:id",
-  verifyToken,
-  checkRole("admin"),
-  validate(updateOrderItemSchema),
-  orderItemController.update
-);
+// PUT update order item by id - UPDATED: Allow regular users
+router.put("/:id", verifyToken, validate(updateOrderItemSchema), orderItemController.update);
 
-// DELETE order item by id
-router.delete(
-  "/:id",
-  verifyToken,
-  checkRole("admin"),
-  orderItemController.remove
-);
+// DELETE order item by id - UPDATED: Allow regular users
+router.delete("/:id", verifyToken, orderItemController.remove);
 
 module.exports = router;
